deps/CppInterOpExtra/include/clang-c/CXCppInterOpExtra.h

LLVM_CLANG_C_EXTERN_C_BEGIN

void clang_CppInterOp_EnableDebugOutput(bool value);
bool clang_CppInterOp_IsDebugOutputEnabled(void);